--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0"
+        "laravel/ui": "^2.0",
+        "infyomlabs/laravel-generator": "7.0.x-dev",
+        "laravelcollective/html": "^6.1",
+        "infyomlabs/adminlte-templates": "7.0.x-dev"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
